--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,17 @@ layout: default
 ---
 
 <div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  
+  <div style="background-image: url('/assets/images/titlebgimg1.png'); background-size: contain;">
+  <h2 class="post-title">&nbsp; {{ page.title }}</h2>
+ 
+ 
+
+
+  <span class="post-date"> &nbsp;&nbsp;  {{ page.date | date_to_string }}</span>
+
+</div>
+
   {{ content }}
 </div>
 
