--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,30 +4,26 @@ layout: default
 
 <div class="post">
   
-  <div style="background-image: url('/assets/images/titlebgimg1.png'); background-size: contain;">
-  <h2 class="post-title">&nbsp; {{ page.title }}</h2>
- 
- 
-
-
-  <span class="post-date"> &nbsp;&nbsp;  {{ page.date | date_to_string }}</span>
-
+  <!-- <div style="background-image: url('/assets/images/titlebgimg1.png'); background-size: contain;"> -->
+  <h2 class="post-title"> {{ page.title }}</h2>
+  <span class="post-date">   {{ page.date | date_to_string }}</span>
+   {{ content }}
 </div>
 
-  {{ content }}
-</div>
+
+ 
 
 <div class="related">
-  <h2>Related Posts</h2>
+  <h3>Related Posts</h3>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
-        <h3>
+        <h4>
           <a href="{{ site.url }}{{ post.url }}">
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
-        </h3>
+        </h4>
       </li>
     {% endfor %}
   </ul>
