--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,22 @@
           <h3 class="masthead-title">
             <a href="{{ site.url }}/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
+
+            <a href="/search/"> <img src ="./assets/images/search-icon2.png" style="float: right ; color: red" ></a>
           </h3>
+
+          <!-- <h3 class="search-bar">
+            <a href="search" title="Home">search</a>
+          </h3> -->
+
+
         </div>
+
+        <div class="container">
+     
+        </div>
+
+
       </div>
 
       <div class="container content">
