--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,19 +16,12 @@
             <a href="{{ site.url }}/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
 
-            <a href="/search/"> <img src ="./assets/images/search-icon2.png" style="float: right ; color: red" ></a>
+            <a href="/search/"><i class="fa fa-search  " aria-hidden="true" style ="float:right;" ></i></a> 
           </h3>
 
-          <!-- <h3 class="search-bar">
-            <a href="search" title="Home">search</a>
-          </h3> -->
-
 
         </div>
 
-        <div class="container">
-     
-        </div>
 
 
       </div>
