--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -6,7 +6,7 @@
           <div class="main-layout">
               <div id="container-search">
                   <main>
-                      {{ content }} sss
+                      {{ content }} 
                   </main>
               </div>
           </div>
