--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,9 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
+  <!--Font Awesome-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
   {% if site.google_analytics != null %}
   {% include google_analytics.html %}
