--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  {% if site.google_analytics != null %}
-  {% include google_analytics.html %}
+  <!-- {% if site.google_analytics != null %} -->
+  <!-- {% include google_analytics.html %} -->
   {% endif %}
 
   <script src="/js/vue.min.js"></script>
