--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,4 +41,9 @@
 
   <script src="/js/vue.min.js"></script>
   <script src="/js/axios.min.js"></script>
+
+
+  <meta name="google-site-verification" content="v0aeEXWQ-gjxWFDbbfdHkDKbzu4BmIey_QigKtALiZ4" />
+
+
 </head>
